Verify that marksdb verify URL starts with ry.marksdb.org (#3115)